--- a/nft-minter/Anchor.toml
+++ b/nft-minter/Anchor.toml
@@ -8,11 +8,11 @@ skip-lint = false
 nft_minter = "84nGazRaquGTNsHMkcF7Zi4T6UzGverZ5ixLRJHtFLbg"
 
 [registry]
-url = "https://api.apr.dev"
+url = "https://api.devnet.solana.com"
 
 [provider]
 cluster = "Localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
-test = "yarn run mocha -t 1000000 tests/"
+test = "anchor test"
