--- a/nft-minter/.gitignore
+++ b/nft-minter/.gitignore
@@ -1,7 +1,26 @@
-.anchor
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+/nft-front/node_modules
+/nft-front/.pnp
+/nft-front/.pnp.js  
+# testing
+/coverage
+
+# production
+/build
+
+# misc
 .DS_Store
-target
-**/*.rs.bk
-node_modules
-test-ledger
-.yarn
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+program-keypair.json
