--- a/nft-minter/programs/nft-minter/Cargo.toml
+++ b/nft-minter/programs/nft-minter/Cargo.toml
@@ -17,4 +17,5 @@ idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 
 [dependencies]
 anchor-lang = "0.30.1"
-anchor-spl = "0.30.1"
+anchor-spl = { version = "0.30.1", features = ["metadata"] }
+mpl-token-metadata = { version = "1.2.5", features = ["no-entrypoint"] }
