--- a/nft-minter/programs/nft-minter/Cargo.toml
+++ b/nft-minter/programs/nft-minter/Cargo.toml
@@ -16,6 +16,6 @@ default = []
 idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 
 [dependencies]
-anchor-lang = "0.30.1"
+anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
 anchor-spl = { version = "0.30.1", features = ["metadata"] }
 mpl-token-metadata = "3.1.0"
